# routes/api.php
@@ -7,3 +7,4 @@ use Illuminate\Support\Facades\Route;
 Route::post('/bookings', [BookingController::class, 'store']);
 Route::get('/hotels/popular', [HotelController::class, 'index']);
 Route::post('/bookings/hold', [BookingController::class, 'hold']);
+Route::post('/bookings/confirm', [BookingController::class, 'confirm']);
